--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-  <title>Rui-Qi Wu</title>
+  <title>Zhi-Ying Du</title>
   
-  <meta name="author" content="Ruiqi Wu">
+  <meta name="author" content="Zhiying Du">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
