--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:14%;max-width:25%;">
-              <a href="images/my.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my.jpg" class="hoverZoomLink"></a>
+              <a href="images/my.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
 
@@ -73,89 +73,38 @@
             <i style="background: url('images/icons/publication.png');-moz-background-size:100% 100%; background-size:100% 100%; width: 30px; height: 30px; position: relative; top: 10px; left: 5px; margin-right: 10px;"></i>
             Publications
           </heading> 
-          <!--
-          <font style="font-size: 13px;">
-            ( * denotes contribution equally )
-          </font>
-          -->
+
           <p></p>
-          <!-- ======================LAMP================================= -->
+          <!-- ======================BHFMEF================================= -->
           <tr style="">
             <td style="padding:20px;width:25%;vertical-align:middle; padding-bottom:8px; padding-top: 8px">
               <div class="one">
-                <img src='images/LAMP/LOGO.png' width="240">
+                <img src='images/BHFMEF/architecture.png' width="240">
               </div>
               </div>
               </script>
             </td>
             <td style="padding-left:20px;width:75%;vertical-align:top;">
-                <papertitle>LAMP: Learn A Motion Pattern for Few-Shot-Based Video Generation</papertitle>
+                <papertitle>Little Strokes Fell Great Oaks: Boosting the Hierarchical Features for Multi-exposure Image Fusion</papertitle>
               </a>
               <p style="margin: -8px;"></p>
               <br>
-              <strong>Rui-Qi Wu</strong>, Liang-Yu Chen, Tong Yang, Chun-Le Guo, Chong-Yi Li, Xiang-Yu Zhang 
+              Pan Mu, <strong>Zhi-Ying Du</strong>, Jong-Yuan Liu, Cong Bai 
               <br>
               <p style="margin: 4px;"></p>
-              Arxiv Pre-print, 2023
-              &nbsp;&nbsp;
-              <img style="position: relative; top:4px; height: 18px;" src="https://img.shields.io/github/stars/RQ-Wu/LAMP?label=%F0%9F%8C%9F%20Star&color=blue">
-              &nbsp;&nbsp;
-              <img style="position: relative; top:4px; height: 18px;" src="https://img.shields.io/github/forks/RQ-Wu/LAMP?label=%F0%9F%94%A7%20Fork&color=green">
-
+              ACM MM, 2023
               <br>
               <p style="margin: 8px;"></p>
-              <a href="https://arxiv.org/abs/2310.10769", target="_blank">PDF</a> &nbsp|&nbsp
-              <a href="https://rq-wu.github.io/projects/LAMP/index.html", target="_blank">Project</a> &nbsp|&nbsp 
-              <a href="https://github.com/RQ-Wu/LAMP", target="_blank">Code</a> &nbsp|&nbsp 
+              <a href="https://dl.acm.org/doi/10.1145/3581783.3612561", target="_blank">PDF</a> &nbsp|&nbsp
+              <a href="https://github.com/ZhiyingDu/BHFMEF", target="_blank">Project</a> &nbsp|&nbsp 
+              <a href="https://github.com/ZhiyingDu/BHFMEF", target="_blank">Code</a> &nbsp|&nbsp 
               <a href="bibs/LAMP.html", target="_blank">BibTex</a>
               <p></p>
               <p></p>
             </td>
           </tr>
           <!-- ================================================================= -->
-          <!-- 
-            <!-- ======================RIDCP================================= -->
-            <tr  style="", onmouseout="panorr_stop()" onmouseover="panorr_start()">
-              <td style="padding:20px;width:25%;vertical-align:middle;padding-bottom:8px; padding-top: 8px">
-                  <img src='images/RIDCP/dehaze.gif' width="240">
-                </div>
-                <script type="text/javascript">
-                  function panorr_start() {
-                    document.getElementById('pano_image').style.opacity = "1";
-                  }
-  
-                  function panorr_stop() {
-                    document.getElementById('pano_image').style.opacity = "0";
-                  }
-                  panorr_stop()
-                </script>
-              </td>
-              <td style="padding:20px;width:75%;vertical-align:top;">
-                  <papertitle>RIDCP: Revitalizing Real Image Dehazing via High-Quality Codebook Priors</papertitle>
-                </a>
-                <p style="margin: -8px;"></p>
-                <br>
-                <strong>Rui-Qi Wu</strong>, Zheng-Peng Duan, Chun-Le Guo, Zhi Chai, Chong-Yi Li
-                <br>
-                <p style="margin: 4px;"></p>
-                <em>CVPR </em>, 2023 
-                &nbsp;&nbsp;
-                <img style="position: relative; top:4px; height: 18px;" src="https://img.shields.io/github/stars/RQ-Wu/RIDCP_dehazing?label=%F0%9F%8C%9F%20Star&color=blue">
-                &nbsp;&nbsp;
-                <img style="position: relative; top:4px; height: 18px;" src="https://img.shields.io/github/forks/RQ-Wu/RIDCP_dehazing?label=%F0%9F%94%A7%20Fork&color=green">
-  
-                <br>
-                <p style="margin: 8px;"></p>
-                <a href="https://arxiv.org/abs/2304.03994", target="_blank">PDF</a> &nbsp|&nbsp 
-                中文版 &nbsp|&nbsp
-                <a href="projects/RIDCP/index.html", target="_blank">Project</a> &nbsp|&nbsp 
-                <a href="https://github.com/RQ-Wu/RIDCP", target="_blank">Code</a> &nbsp|&nbsp
-                <a href="bibs/RIDCP.html", target="_blank">BibTex</a>
-                <p></p>
-              </td>
-            </tr>
-          -->
-          <!-- ================================================================= -->
+
         </tbody></table>
       
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
