--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:14%;max-width:25%;">
-              <a href="images/my.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/my.jpg" class="hoverZoomLink"></a>
+              <a href="images/me.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/me.png" class="hoverZoomLink"></a>
             </td>
           </tr>
 
