--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </heading>
           <td style="padding:20px;width:75%;vertical-align:top;padding-top: 0;position: relative;top: 0px;">
             <ul>
-              <li>Second Runner-up (Team Feedforward) in <a href="https://studio.brainpp.com/competition/5?tab=rank" target="_blank">RAW Image Blind De-noising</a>.</li>
+              <!-- <li>Second Runner-up (Team Feedforward) in <a href="https://studio.brainpp.com/competition/5?tab=rank" target="_blank">RAW Image Blind De-noising</a>.</li> -->
               <li>National First Prize in <a href="http://www.mcm.edu.cn/" target="_blank">National Undergraduate Mathematical Modeling Contest</a>.</li>
             </ul>
           </td>
