--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <a href="https://dl.acm.org/doi/10.1145/3581783.3612561", target="_blank">PDF</a> &nbsp|&nbsp
               <a href="https://github.com/ZhiyingDu/BHFMEF", target="_blank">Project</a> &nbsp|&nbsp 
               <a href="https://github.com/ZhiyingDu/BHFMEF", target="_blank">Code</a> &nbsp|&nbsp 
-              <a href="bibs/LAMP.html", target="_blank">BibTex</a>
+              <a href="bibs/BHFMEF.html", target="_blank">BibTex</a>
               <p></p>
               <p></p>
             </td>
