--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               ACM MM, 2023
               <br>
               <p style="margin: 8px;"></p>
-              <a href="https://dl.acm.org/doi/10.1145/3581783.3612561", target="_blank">PDF</a> &nbsp|&nbsp
+              <a href="https://arxiv.org/abs/2404.06033", target="_blank">PDF</a> &nbsp|&nbsp
               <a href="https://github.com/ZhiyingDu/BHFMEF", target="_blank">Project</a> &nbsp|&nbsp 
               <a href="https://github.com/ZhiyingDu/BHFMEF", target="_blank">Code</a> &nbsp|&nbsp 
               <a href="bibs/BHFMEF.html", target="_blank">BibTex</a>
