--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <i style="background: url('images/icons/zhihu.png');-moz-background-size:100% 100%; background-size:100% 100%;"></i>
                 <a href="https://www.zhihu.com/people/a-chao-49-95-55" target="_blank">Zhihu (知乎)</a>
               </p>
-              <p style="font-size: 13px; letter-spacing: 0.7px; width:90%; padding-left: 10px; text-align: justify;">I'm a doctor student of <a href="https://fvl.fudan.edu.cn/main.htm" target="_blank">FVL</a>, College of Computer Science, Fudan University, under the supervision of Prof. 
-                Zuxuan Wu. I received the B.E. degree from Zhejiang University of Technology (ZJUT) in 2024.
+              <p style="font-size: 13px; letter-spacing: 0.7px; width:90%; padding-left: 10px; text-align: justify;">I'm a doctor student of <a href="https://fvl.fudan.edu.cn/main.htm" target="_blank">FVL</a>, College of Computer Science, Fudan University, under the supervision of <a href="https://zxwu.azurewebsites.net/" target="_blank">Prof. 
+                Zuxuan Wu</a>. I received the B.E. degree from Zhejiang University of Technology (ZJUT) in 2024.
                 My research interests are in computer vision and machine learning, with a particular focus on image restoration and video generation.
               </p>
             </td>
@@ -135,7 +135,7 @@
           </div>
     <p><center><font face="Arial">
           <br>
-              &copy; Zhi-Ying Du | Last updated: Nov. 2023
+              &copy; Zhi-Ying Du | Last updated: April. 2024
           
   </div>
 </body>
