--- a/index.html
+++ b/index.html
@@ -75,6 +75,34 @@
           </heading> 
 
           <p></p>
+          <!-- ======================BFMEF================================= -->
+          <tr style="">
+            <td style="padding:20px;width:25%;vertical-align:middle; padding-bottom:8px; padding-top: 8px">
+              <div class="one">
+                <img src='images/BFMEF/BFMEF_overview.png' width="240">
+              </div>
+              </div>
+              </script>
+            </td>
+            <td style="padding-left:20px;width:75%;vertical-align:top;">
+                <papertitle>BFMEF: Brightness-Free Multi-exposure Image Fusion via Adaptive Correction</papertitle>
+              </a>
+              <p style="margin: -8px;"></p>
+              <br>
+              Pan Mu, Binjia Zhou, Qirui Wang, <strong>Zhi-Ying Du</strong>, Xiaoyan Wang
+              <br>
+              <p style="margin: 4px;"></p
+              ICME, 2024
+              <br>
+              <p style="margin: 8px;"></p>
+              <a href="https://arxiv.org/abs/2404.06033", target="_blank">PDF</a> &nbsp|&nbsp
+              <a href="#", target="_blank">Code</a> &nbsp|&nbsp 
+              <a href="#", target="_blank">BibTex</a>
+              <p></p>
+              <p></p>
+            </td>
+          </tr>
+          <!-- ================================================================= -->
           <!-- ======================BHFMEF================================= -->
           <tr style="">
             <td style="padding:20px;width:25%;vertical-align:middle; padding-bottom:8px; padding-top: 8px">
