--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           </heading>
           <p></p>
           <ul style="padding-left: 60px; padding-bottom: 0px;">
+            <li><font style="color:red">[09/2024]</font> Our team won the Third Place in ECCV2024 W-CODA Workshop Challenge. </li>
             <li><font style="color:red">[11/2023]</font> One paper was accepted by ACM MM. </li>
             <!--
             <li><font style="color:red">[02/2023]</font> One paper was accepted by CVPR 2023. </li>
@@ -143,6 +144,7 @@
           <td style="padding:20px;width:75%;vertical-align:top;padding-top: 0;position: relative;top: 0px;">
             <ul>
               <!-- <li>Second Runner-up (Team Feedforward) in <a href="https://studio.brainpp.com/competition/5?tab=rank" target="_blank">RAW Image Blind De-noising</a>.</li> -->
+              <li>Third Place Award in National First Prize in <a href="https://coda-dataset.github.io/w-coda2024/#cfp" target="_blank">ECCV24 W-CODA Competitions Track2</a>.</li>
               <li>National First Prize in <a href="http://www.mcm.edu.cn/" target="_blank">National Undergraduate Mathematical Modeling Contest</a>.</li>
             </ul>
           </td>
@@ -163,7 +165,7 @@
           </div>
     <p><center><font face="Arial">
           <br>
-              &copy; Zhi-Ying Du | Last updated: April. 2024
+              &copy; Zhi-Ying Du | Last updated: December. 2024
           
   </div>
 </body>
