--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               ICME, 2024
               <br>
               <p style="margin: 8px;"></p>
-              <a href="https://arxiv.org/abs/2404.06033", target="_blank">PDF</a> &nbsp|&nbsp
+              <a href="https://ieeexplore.ieee.org/abstract/document/10688315", target="_blank">PDF</a> &nbsp|&nbsp
               <a href="#", target="_blank">Code</a> &nbsp|&nbsp 
               <a href="#", target="_blank">BibTex</a>
               <p></p>
