--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
-  <title>Zhi-Ying Du</title>
+  <title>Zhiying Du</title>
   
   <meta name="author" content="Zhi-Ying Du">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
             <td style="padding:2.5%;width:53%;vertical-align:middle">
               <p style="text-align:center">
                 <i style="background: url('images/logo.png');-moz-background-size:100% 100%; background-size:100% 100%; width:22px; height: 22px; "></i> &nbsp&nbsp
-                <name>Zhi-Ying Du (杜智颖)</name>
+                <name>Zhiying Du (杜智颖)</name>
               </p>
               <p style="text-align:center">
                 <!--
