--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.zhihu.com/people/a-chao-49-95-55" target="_blank">Zhihu (知乎)</a> -->
               </p>
               <p style="font-size: 13px; letter-spacing: 0.7px; width:90%; padding-left: 10px; text-align: justify;">I'm a doctor student of <a href="https://fvl.fudan.edu.cn/main.htm" target="_blank">FVL</a>, College of Computer Science, Fudan University, under the supervision of <a href="https://zxwu.azurewebsites.net/" target="_blank">Prof. 
-                Zuxuan Wu</a>. My research interests are in computer vision and machine learning, with a particular focus on Embodied AI and Video Generation.
+                Zuxuan Wu</a>. Besides, I am an intern at Microsoft Research Asia, where I work under the supervision of <a href="https://www.microsoft.com/en-us/research/people/yalia/" target="_blank">Yaobo Liang</a> and <a href="https://jlyang.org/" target="_blank">Jiaolong Yang</a>. My research interests lie in Embodied AI.
               </p>
             </td>
             <td style="padding:2.5%;width:14%;max-width:25%;">
