--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.zhihu.com/people/a-chao-49-95-55" target="_blank">Zhihu (知乎)</a> -->
               </p>
               <p style="font-size: 13px; letter-spacing: 0.7px; width:90%; padding-left: 10px; text-align: justify;">I'm a doctor student of <a href="https://fvl.fudan.edu.cn/main.htm" target="_blank">FVL</a>, College of Computer Science, Fudan University, under the supervision of <a href="https://zxwu.azurewebsites.net/" target="_blank">Prof. 
-                Zuxuan Wu</a>. Besides, I am an intern at Microsoft Research Asia, where I work under the supervision of <a href="https://www.microsoft.com/en-us/research/people/yalia/" target="_blank">Yaobo Liang</a> and <a href="https://jlyang.org/" target="_blank">Jiaolong Yang</a>. My research interests lie in Embodied AI.
+                Zuxuan Wu</a>. Besides, I am an intern at Microsoft Research Asia, where I work under the supervision of <a href="https://www.microsoft.com/en-us/research/people/yalia/" target="_blank">Yaobo Liang</a> and <a href="https://jlyang.org/" target="_blank">Jiaolong Yang</a>. My research interest lies in Embodied AI.
               </p>
             </td>
             <td style="padding:2.5%;width:14%;max-width:25%;">
@@ -77,34 +77,7 @@
           </heading> 
 
           <p></p>
-          <!-- ======================BFMEF================================= -->
-          <tr style="">
-            <td style="padding:20px;width:25%;vertical-align:middle; padding-bottom:8px; padding-top: 8px">
-              <div class="one">
-                <img src='images/BFMEF/BFMEF_overview.png' width="240">
-              </div>
-              </div>
-              </script>
-            </td>
-            <td style="padding-left:20px;width:75%;vertical-align:top;">
-                <papertitle>BFMEF: Brightness-Free Multi-exposure Image Fusion via Adaptive Correction</papertitle>
-              </a>
-              <p style="margin: -8px;"></p>
-              <br>
-              Pan Mu, Binjia Zhou, Qirui Wang, <strong>Zhi-Ying Du</strong>, Xiaoyan Wang
-              <br>
-              <p style="margin: 4px;"></p
-              ICME, 2024
-              <br>
-              <p style="margin: 8px;"></p>
-              <a href="https://ieeexplore.ieee.org/abstract/document/10688315", target="_blank">PDF</a> &nbsp|&nbsp
-              <a href="#", target="_blank">Code</a> &nbsp|&nbsp 
-              <a href="#", target="_blank">BibTex</a>
-              <p></p>
-              <p></p>
-            </td>
-          </tr>
-          <!-- ================================================================= -->
+        
           <!-- ======================BHFMEF================================= -->
           <tr style="">
             <td style="padding:20px;width:25%;vertical-align:middle; padding-bottom:8px; padding-top: 8px">
@@ -119,7 +92,7 @@
               </a>
               <p style="margin: -8px;"></p>
               <br>
-              Pan Mu, <strong>Zhi-Ying Du</strong>, Jong-Yuan Liu, Cong Bai 
+              Pan Mu, <strong>Zhiying Du</strong>, Jin-Yuan Liu, Cong Bai 
               <br>
               <p style="margin: 4px;"></p>
               ACM MM, 2023
